0.28

- The era names for the era() method are now retrieved from the
DateTime.pm object's associated locale.  The old era() method, which
was hard-coded to use BCE and CE, is renamed secular_era().  The
christian_era() method remains the same.


0.27    2005-01-31

[ ENHANCEMENTS ]

- Added local_rd_values() method for the benefit of other modules like
DateTime::Event::Recurrence.


0.26    2005-01-27

[ BUG FIXES ]

- The docs claimed that the delta_ms(), delta_md(), delta_days()
methods always returned a positive duration, but this was not true for
delta_md() or delta_days().


0.25    2005-01-10 (the "new year, new bugs" release)

[ BUG FIXES ]

- Calling set_time_zone() for a datetime very close to a time zone
change died for many of the Olson time zones.

- The docs for the from_object constructor said that by default, new
objects were in the UTC time zone, but in reality the default was the
floating time zone.  The docs were changed to match the code.  Ticket
9278 on rt.cpan.org.


0.24    2004-12-10 (the "have I mentioned I hate leap seconds" release)

[ BUG FIXES ]

- Fixed even more bugs related to leap seconds and time zones.
Reported by Eugene van der Pijll.

[ KNOWN BUGS ]

- Offsets with a seconds portion (like "+00:00:30") act strangely near
leap seconds.  Reported by Eugene van der Pijll.  This will be fixed
in a future release.


0.23    2004-12-09 (the "oh how I hate leap seconds" release)

[ ENHANCEMENTS ]

- Added a number of convenience "set" methods: set_year, set_month,
set_day, set_hour, set_minute, set_second, set_nanosecond, and
set_locale.  Suggested by Michael Schwern.

- Added christian_era and year_with_christian_era methods.

- Clarified that from_epoch(), today(), and now() all return objects
in the UTC time zone.  Suggested by Sagar Shah and others.

- Added formatter parameter to constructor, which allows per-object
stringification.  Based on a patch from Daisuke Maki.

[ BUG FIXES ]
